# vpr_dataset_creator_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: create_dataset.launch  rviz.rviz
scripts/: combine_dataset_creator.py  dataset_creator.py
