<?xml version="1.0"?>
<package format="3">
  <name>vpr_dataset_creator_ros</name>
  <version>0.0.0</version>
  <description>The vpr_dataset_creator_ros package</description>
  <maintainer email="tnakamura.amsl@gmail.com">Toshiki Nakamura</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>

  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>image_transport_plugins</exec_depend>
</package>
